LOG:
20090330 - 0.1.0 first very early release, the daemon compiles and run, but is
           useless

TODO:
2009032901
liblixacommon is compiled with POSIX thread enabled; when a non POSIX
thread enable version of "client" will be released, liblixacommon must be
double compiled (single and multithread)

2009040101
lixad command line should be able to specify a custom config file instead of
default system configuration file; server_config() is already enabled
