@@ -81,6 +81,10 @@ define LIXA_RC_BYPASSED_OPERATION              +2
  */
 #define LIXA_RC_OUT_OF_RANGE                    -2
 /**
+ * Configuration file is broken
+ */
+#define LIXA_RC_CONFIG_ERROR                    -3
+/**
  * A passed object/option/arg is NULL and it can NOT be inferred from a default
  * value
 define LIXA_RC_NULL_OBJECT                     -5
@@ -132,8 +136,8 @@ define LIXA_RC_MALLOC_ERROR                  -100
  */
 /**
  * "realloc" function error
-define LIXA_RC_REALLOC_ERROR                 -101
  */
+#define LIXA_RC_REALLOC_ERROR                 -101
 /**
  * "open" function error
  */
